# truffle-sdk-public

./: .bumpversion.cfg  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: uv-build-wheel.yml
tests/: test_tests.py
truffle/: __init__.py  client.py  requirements.txt  truffle_app.py  truffle_cli.py
truffle/platform/: __init__.py  arm_grpc.txt
